[package]
name = "maze_solver"
version = "0.1.0"
authors = ["Michael Kennedy <michaeljkennedy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
image = "0.21.2"
num = "0.2"
priority-queue ="0.6.0"

[profile.release]
lto = true
codegen-units = 1
